[tool.poetry]


[project]
name = "mcp23017"
version = "0.3.4"
description = ""
authors = [{ name = "seekingmeanings", email = "git-j@mail.o-family.de" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
packages = [
    {include = "mcp23017", from="src"},
    {include = "emulated_smbus", from="src"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"
pytest = "^8.3.5"

